# Robocyril

./: .gitattributes  .gitignore  README.md  apache-devblog-fragment.conf  apache-devblog.conf  build-on-vsprod.sh  deploy-to-vsprod.sh  first-post.md  lighttpd-cyril.conf  lighttpd-devblog.conf  update_cyril.md
.claude/: persona.toml
.claude/commands/: blog.md
cgi-wrappers/: blog-feed.cgi  blog-post.cgi  blog-posts.cgi
devblog-frontend/: index.html  package-lock.json  package.json  vite.config.js
devblog-frontend/src/: App.svelte  app.css
devblog-frontend/src/lib/: Header.svelte  Tag.svelte  api.js  projects.js
devblog-frontend/src/routes/: Admin.svelte  Home.svelte  Post.svelte  Projects.svelte
devblog-wrappers/: devblog-feed.cgi  devblog-post.cgi  devblog-posts.cgi  devblog-projects.cgi
robocyril/: Cargo.toml  HANDOVER.md  nginx-blog.conf
robocyril-frontend/: index.html  vite.config.js
robocyril-frontend/src/: App.svelte
robocyril-frontend/src/lib/: Header.svelte  Skeleton.svelte  api.js
robocyril-frontend/src/routes/: Home.svelte  NotFound.svelte  Post.svelte
robocyril/src/: delete.rs  feed.rs  get.rs  init.rs  lib.rs  list.rs  post.rs  projects.rs  update.rs
