[package]
name = "robocyril-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
slug = "0.1"

[[bin]]
name = "blog-post"
path = "src/post.rs"

[[bin]]
name = "blog-get"
path = "src/get.rs"

[[bin]]
name = "blog-list"
path = "src/list.rs"

[[bin]]
name = "blog-init"
path = "src/init.rs"

[[bin]]
name = "blog-update"
path = "src/update.rs"

[[bin]]
name = "blog-delete"
path = "src/delete.rs"

[[bin]]
name = "blog-feed"
path = "src/feed.rs"

[[bin]]
name = "blog-projects"
path = "src/projects.rs"
